ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: prod
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,OPTIONS, DELETE, PATCH
     nginx.ingress.kubernetes.io/auth-response-headers: "authorization, x-auth-request-user, x-auth-request-email, x_auth_request_access_token"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "300000"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300000"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "300000"
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mario-service
            port:
              number: 3000
